--- a/src/App.scss
+++ b/src/App.scss
@@ -83,5 +83,82 @@ body {
 		width: 100%;
 		background-color: #f5f5f5;
 		padding: 1rem;
+
+		#lookup {
+			padding: 1rem;
+			#pageTitle {
+				font-weight: bold;
+			}
+
+			#lookupContainer {
+				display: flex;
+				justify-content: center;
+				box-sizing: border-box;
+				max-width: 800px;
+				margin: 2rem auto;
+
+				#switch {
+					:hover {
+						cursor: pointer;
+					}
+					.option {
+						margin-right: 1rem;
+						font-size: large;
+					}
+					.selected {
+						border-bottom: 3px solid #009bc1;
+						padding-bottom: 0.25rem;
+					}
+				}
+
+				#form {
+					display: flex;
+					justify-content: center;
+					flex-direction: column;
+					.inputs {
+						padding: 1rem 0;
+						input {
+							height: 2.5rem;
+							width: 100%;
+							margin: 0.5rem 0;
+							border: 1px solid lightGrey;
+							border-radius: 10px;
+							padding: 1rem;
+						}
+					}
+
+					.error {
+						height: 48px;
+						width: 100%;
+						font-size: 18px;
+						color: #f36f5e;
+						margin: 0 1rem;
+					}
+
+					#searchBtn {
+						height: 48px;
+						width: 100%;
+						font-size: 18px;
+						color: #009bc1;
+						background: #e5f5f8;
+						font-weight: bold;
+						border: none;
+						border-radius: 10px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+					}
+				}
+			}
+		}
 	}
+}
+
+.card {
+	width: 100%;
+	background-color: white;
+	border: 1px solid lightGrey;
+	border-radius: 10px;
+	padding: 2rem;
+	box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
 }
