--- a/src/App.scss
+++ b/src/App.scss
@@ -58,8 +58,9 @@ body {
 			}
 
 			.navItem {
-				padding: 1rem 1rem;
-				vertical-align: middle;
+				padding: 0.5rem 1rem;
+				display: flex;
+				align-items: center;
 				.icon {
 					color: grey;
 					@media only screen and (min-width: 700px) {
@@ -68,6 +69,7 @@ body {
 				}
 				.linkText {
 					text-decoration: none;
+					font-size: small;
 					display: none;
 					padding: 1rem;
 					@media only screen and (min-width: 700px) {
@@ -124,6 +126,15 @@ body {
 							border: 1px solid lightGrey;
 							border-radius: 10px;
 							padding: 1rem;
+						}
+					}
+
+					#select {
+						margin: 0.5rem 0;
+						font-size: small;
+
+						input {
+							height: 100%;
 						}
 					}
 
