--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,8 @@ body {
 
 #root,
 #app {
-	height: 100%;
-	width: 100%;
+	min-height: 100%;
+	min-width: 100%;
 	display: flex;
 	flex-direction: row;
 	font-family: DM Sans, sans-serif;
@@ -26,6 +26,11 @@ body {
 		@media only screen and (min-width: 700px) {
 			min-width: 240px;
 			text-align: left;
+		}
+
+		#sideContainer {
+			position: sticky;
+			top: 0;
 		}
 
 		#logoItem {
@@ -58,20 +63,24 @@ body {
 			}
 
 			.navItem {
-				padding: 0.5rem 1rem;
+				padding: 1rem 1rem;
 				display: flex;
 				align-items: center;
+				justify-content: center;
+				@media only screen and (min-width: 700px) {
+					justify-content: left;
+				}
 				.icon {
 					color: grey;
 					@media only screen and (min-width: 700px) {
-						padding: 0 0.25rem;
+						padding: 0 0.5rem;
 					}
 				}
 				.linkText {
 					text-decoration: none;
 					font-size: small;
 					display: none;
-					padding: 1rem;
+					padding: 0 1rem;
 					@media only screen and (min-width: 700px) {
 						display: inline;
 					}
@@ -86,13 +95,40 @@ body {
 		background-color: #f5f5f5;
 		padding: 1rem;
 
-		#lookup {
-			padding: 1rem;
+		#addressBook {
+			@media only screen and (min-width: 700px) {
+				padding: 1rem;
+			}
+			#selectedAddress {
+				margin: 1rem 0;
+				div {
+					padding: 0.5rem;
+					font-size: large;
+				}
+			}
+			#addresses {
+				margin: 1rem 0;
+				.address {
+					cursor: pointer;
+					padding: 1rem;
+					margin: 1rem 0;
+				}
+				.selected {
+					border-color: #009bc1;
+				}
+			}
+		}
+
+		#addAddress {
+			@media only screen and (min-width: 700px) {
+				padding: 1rem;
+			}
+
 			#pageTitle {
 				font-weight: bold;
 			}
 
-			#lookupContainer {
+			#formContainer {
 				display: flex;
 				justify-content: center;
 				box-sizing: border-box;
@@ -139,11 +175,15 @@ body {
 					}
 
 					.error {
-						height: 48px;
 						width: 100%;
 						font-size: 18px;
 						color: #f36f5e;
-						margin: 0 1rem;
+					}
+					.message {
+						width: 100%;
+						font-size: 18px;
+						color: lightgreen;
+						margin: 0.5rem;
 					}
 
 					#searchBtn {
@@ -158,7 +198,26 @@ body {
 						display: flex;
 						justify-content: center;
 						align-items: center;
+						cursor: pointer;
 					}
+				}
+			}
+
+			#results {
+				margin: 1rem;
+				:hover {
+					color: #009bc1;
+				}
+				.result {
+					margin: 1rem 0;
+					cursor: pointer;
+				}
+				.card {
+					padding: 1rem;
+				}
+				.added {
+					border-color: lightgreen;
+					color: lightgreen;
 				}
 			}
 		}
