Tweak message handling

--- a/src/App.scss
+++ b/src/App.scss
@@ -218,6 +218,9 @@ body {
 				.added {
 					border-color: lightgreen;
 					color: lightgreen;
+					:hover {
+						color: lightgreen;
+					}
 				}
 			}
 		}
