--- a/src/App.scss
+++ b/src/App.scss
@@ -23,14 +23,22 @@ body {
 		width: 100%;
 		background-color: #f5f5f5;
 		padding: 1rem;
-	}
-}
 
-.card {
-	width: 100%;
-	background-color: white;
-	border: 1px solid lightGrey;
-	border-radius: 10px;
-	padding: 2rem;
-	box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
+		.selectedAddress {
+			margin: 1rem;
+			div {
+				padding: 0.5rem;
+				font-size: large;
+			}
+		}
+
+		.card {
+			width: 100%;
+			background-color: white;
+			border: 1px solid lightGrey;
+			border-radius: 10px;
+			padding: 2rem;
+			box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
+		}
+	}
 }
