--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,19 @@ body {
 		}
 	}
 }
+
+::-webkit-scrollbar {
+	width: 5px;
+	height: 10px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+	background-color: #f0f2f5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: rgba(0, 0, 0, 0.4);
+}
